--- a/exercicio-1/index.html
+++ b/exercicio-1/index.html
@@ -70,7 +70,7 @@
         <form class="inputs-container">
           <div>
             <label for="name">Titulo da foto</label>
-            <input type="text" name="titulo-da-foto" />
+            <input type="text" name="titulo-da-foto" id="titulo-foto" />
           </div>
           <div>
             <label for="descricao">Descrição</label>
@@ -83,8 +83,8 @@
           </div>
         </form>
         <div class="botoes-inputs-container">
-          <button class="botao-descartar">Descartar</button>
-          <button class="botao-publicar">Publicar</button>
+          <button class="botao-descartar" id="btn-descartar">Descartar</button>
+          <button class="botao-publicar" id="btn-publicar">Publicar</button>
         </div>
       </section>
     </main>
